@@ -1,3 +1,4 @@
+- If fs/Folder fails to copy (because destination might be inside source folder) the already created folder record will be deleted 
 - Added clarification for CalDAV tasklist sync to the settings->synchronization panel
 - Calendar: fixed warning message for the event accept external page
 - Site module: Fixed some namespace problems that broke the site treepanel
